Fix commonjs default module resolution

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"allowSyntheticDefaultImports": true,
+		"esModuleInterop": true,
 		"resolveJsonModule": true,
 		"removeComments": true,
 		"baseUrl": "src",
