--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "clean": "rimraf dist",
     "start": "npm-run-all clean watch",
     "preversion": "npm-run-all clean build",
-    "postversion": "git push && git push --tags"
+    "git-push": "git push",
+    "npm-publish": "npm publish",
+    "postversion": "npm-run-all git-push npm-publish"
   },
   "devDependencies": {
-    "@drovp/types": "^0.0.7",
+    "@drovp/types": "^0.0.9",
     "npm-run-all": "^4.1.5",
     "rimraf": "^3.0.2",
     "tslib": "^2.3.1",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.2"
   }
 }
